lining changes, blurred border and coloring fixes and animation of nav bar timing fixes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,7 @@
 
 html {
   height: 100%;
-  overflow: hidden;
-  background: black;
+  background: #0d0d0deb;
 }
 
 body {
