--- a/client/src/components/Recipes/Recipes.css
+++ b/client/src/components/Recipes/Recipes.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: white;
+  height: 100%;
 }
 
 .btn {
